[tool.poetry]
authors = ["Wu Haotian <whtsky@gmail.com>"]
description = ""
name = "dingtalk-dianfan"
version = "0.1.0"

[tool.poetry.dependencies]
chinesecalendar = "^1.5.0"
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.790"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
