[tool.poetry]
authors = ["Wu Haotian <whtsky@gmail.com>"]
description = ""
name = "dingtalk-dianfan"
version = "0.1.0"

[tool.poetry.dependencies]
chinesecalendar = "^1.5.0"
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.9.0"
mypy = "^0.790"
pytest = "^6.2.3"
pytest-icdiff = "^0.5"
pytest-mypy = "^0.8.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "--mypy"
